DOCSP-581 - Fix spacing on lists, following code blocks, and a few other tweaks.

--- a/themes/mongodb-tutorials/src/styles/base.scss
+++ b/themes/mongodb-tutorials/src/styles/base.scss
@@ -60,12 +60,6 @@ p {
   font-weight: normal;
   line-height: 20px;
   margin-bottom: 30px;
-
-  // TODO: I don't think this works
-  + ul,
-  ol {
-    margin-bottom: 10px;
-  }
 }
 
 button {
